# 42_minishell

./: .gitignore  README.md
Doc/: Minishell-2024-07-15-1418.excalidraw  brouillon_adrien.txt  brouillon_gauthier.txt  brouillon_yoan.txt  fonction_details.txt  reste_a_faire.txt  resume.txt  roadmap.txt
Doc/Brouillons/: 01_convert_token.c  02_convert_env.c  abc.c  brouillon_gauthier.txt  brouillon_yoan.txt  cdgot.c  exec_execve.c  fonction_a_implementer.txt  liens_a_garder.txt
Doc/historique des fonction plus utilisé/envp/: 10_interface.c  envp_utils2.c  testls.c
Doc/historique excalidraw/: Minishell-2024-08-09.excalidraw
Doc/minishell-1/: minishell
Minishell/: .gitignore  Makefile  file1  file2  main.c  minishell  salut  salut echo test  test echo salut
Minishell/include/: minishell.h
Minishell/srcs/: 00_error.c  main.c
Minishell/srcs/builtin/: 00_mini_cd.c  01_mini_echo.c  02_mini_env.c  03_export_1.c  03_export_2.c  03_mini_export.c  03_mini_export1.c  03_mini_export2.c  03_mini_export3.c  04_export_2.c  04_mini_unset.c  05_mini_pwd.c  06_mini_exit.c  07_clear.c  07_mini_clear.c  07_mini_unset.c  10_bt_utils.c  10_builtinexe.c  10_exec_builtin.c  20_bt_utils.c  bt_utils.c
Minishell/srcs/envp/: 00_init.c  00_init1.c  00_init2.c  00_init_env.c  01_free.c  02_modification.c  10_envp_utils.c  envp.c  envp.h  envp_utils.c  envp_utils2.c  (+1 more)
minishell/: Makefile
minishell/include/: minishell.h
minishell/srcs/: main.c
test de parsing clean/: Makefile  main.c
test_minishell/: CMakeLists.txt
testing/: 800 tests pour minishell.xlsx  a.out  token_test.c
(+107 files in other folders)
